# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.
[package]
name = "deno_core"
version = "0.140.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"
description = "A modern JavaScript/TypeScript runtime built with V8, Rust, and Tokio"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0.57"
# --- added by minus_v8 ---
# keep in sync with the dependency from serde_v8
bytes = "1"
# -------------------------
deno_ops = { path = "../ops", version = "0.18.0" }
# --- added by minus_v8 ---
# keep derive_more in sync with the dependency from serde_v8
derive_more = "0.99.17"
downcast-rs = "1.2.0"
encoding_rs = "0.8.31"
erased-serde = "0.3.21"
# -------------------------
futures = "0.3.21"
indexmap = "1.8.1"
libc = "0.2.126"
log = "0.4.16"
once_cell = "1.10.0"
parking_lot = "0.12.0"
pin-project = "1.0.10"
# minus_8: added feature rc
serde = { version = "1.0.136", features = ["derive", "rc"] }
# -------------------------
serde_json = { version = "1.0.79", features = ["preserve_order"] }
sourcemap = "=6.0.1"
url = { version = "2.2.2", features = ["serde"] }

[[example]]
name = "http_bench_json_ops"
path = "examples/http_bench_json_ops.rs"

# These dependencies are only used for the 'http_bench_*_ops' examples.
[dev-dependencies]
deno_ast = { version = "0.16.0", features = ["transpiling"] }
tokio = { version = "1.19", features = ["full"] }
