# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_runtime"
version = "0.66.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/deno"
description = "Provides the deno runtime library"

[features]
# "fake" feature that allows to generate docs on docs.rs
docsrs = []

[lib]
name = "deno_runtime"
path = "lib.rs"

[[example]]
name = "hello_runtime"
path = "examples/hello_runtime.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.9"

[dependencies]
deno_core = { version = "0.140.0", path = "../core" }
deno_http = { version = "0.52.0", path = "../ext/http" }
deno_net = { version = "0.50.0", path = "../ext/net" }
deno_tls = { version = "0.45.0", path = "../ext/tls" }

atty = "0.2.14"
dlopen = "0.1.8"
encoding_rs = "0.8.31"
filetime = "0.2.16"
fs3 = "0.5.0"
http = "0.2.6"
hyper = { version = "0.14.18", features = ["server", "stream", "http1", "http2", "runtime"] }
libc = "0.2.126"
log = "0.4.16"
lzzzz = '1.0'
netif = "0.1.3"
notify = "=5.0.0-pre.15"
once_cell = "1.10.0"
regex = "1.5.5"
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
signal-hook-registry = "1.4.0"
sys-info = "0.9.1"
termcolor = "1.1.3"
tokio = { version = "1.19", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4"] }

# --- added by minus_v8 ---
# keep in sync with deno_crypto
rand = "0.8.4"
# keep in sync with deno_fetch
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli"] }
# -------------------------

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"
# minus_v8: enable `winuser` feature (this appears to be transitively enabled by a dependency we remove for minus_v8?)
winapi = { version = "0.3.9", features = ["commapi", "knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2", "winuser"] }
# -------------------------

[target.'cfg(unix)'.dependencies]
nix = "=0.23.0"

[dev-dependencies]
# Used in benchmark
test_util = { path = "../test_util" }

[package.metadata.docs.rs]
features = ["docsrs"]
